Fixed chat bar for bottom aligned input tag

--- a/Themes/Translucence/src/_selectorPlaceholders.scss
+++ b/Themes/Translucence/src/_selectorPlaceholders.scss
@@ -319,8 +319,23 @@
 .bd-settings-title {
 	@extend %bdSettingsTitle !optional;
 }
+.bd-settings-group {
+	@extend %bdSettingsGroup !optional;
+}
+.collapsible {
+	@extend %bdSettingsGroupCollapsible !optional;
+}
+.expanded {
+	@extend %bdSettingsGroupExpanded !optional;
+}
 .bd-settings-group-title {
 	@extend %bdSettingsGroupTitle !optional;
+}
+.bd-settings-container {
+	@extend %bdSettingsContainer !optional;
+}
+.bd-setting-item {
+	@extend %bdSettingItem !optional;
 }
 .bd-addon-title {
 	@extend %bdAddonTitle !optional;
@@ -580,6 +595,9 @@
 .selected {
 	@extend %bdTabItemSelected !optional;
 }
+.bd-divider {
+	@extend %bdDivider !optional;
+}
 .bd-error-modal-content {
 	@extend %bdErrorsModalContent !optional;
 }
@@ -603,9 +621,6 @@
 }
 .bd-addon-error-stack {
 	@extend  %bdErrorCodeErrorStack !optional;
-}
-.bd-divider {
-	@extend %bdErrorCardDivider !optional;
 }
 .containerDefault__29444 {
 	@extend %categoryContainerDefault !optional;
@@ -1996,6 +2011,9 @@
 .channelAppLauncher_e6e74f {
     @extend %channelAppLauncher !optional;
 }
+.buttonContainer_e6e74f {
+	@extend %channelAppLauncherButtonContainer !optional;
+}
 .button_e6e74f {
     @extend %channelAppLauncherButton !optional;
 }
@@ -2064,6 +2082,12 @@
 }
 .button__74017 {
 	@extend %channelTextAreaButton !optional;
+}
+.button__24af7 {
+	@extend %channelTextAreaButtonInner !optional;
+}
+.noHover__24af7 {
+	@extend %channelTextAreaButtonInnerNoHover !optional;
 }
 .emojiButton__04eed {
 	@extend %channelTextAreaEmojiButton !optional;
@@ -2484,6 +2508,9 @@
 }
 .lg__6af3a {
     @extend %buttonV2Large !optional;
+}
+.icon-only__6af3a {
+	@extend %buttonV2IconOnly !optional;
 }
 .buttonChildrenWrapper__6af3a {
     @extend %buttonV2ChildrenWrapper !optional;
@@ -3375,6 +3402,33 @@
 }
 .scroller__244e5 {
 	@extend %nitroHomePageScroller !optional;
+}
+.mainPageScroller_ca1a02 {
+    @extend %nitroHomeMainPageScroller !optional;
+}
+.homeWrapper__0920e {
+    @extend %nitroHomeWrapper !optional;
+}
+.hoverWrapper_b5493b {
+    @extend %nitroHomeCardHoverWrapper !optional;
+}
+.noFlipCardContainer_b5493b {
+    @extend %nitroHomeNoFlipCardContainer !optional;
+}
+.card_b5493b {
+    @extend %nitroHomeCard !optional;
+}
+.cardImage_b5493b {
+    @extend %nitroHomeCardImage !optional;
+}
+.cardDescription__1f069 {
+    @extend %nitroHomeCardDescription !optional;
+}
+.container_da4aee {
+    @extend %nitroHomeGiftNitroContainer !optional;
+}
+.textContainer_da4aee {
+    @extend %nitroHomeGiftNitroTextContainer !optional;
 }
 .premiumContainer__11813 {
 	@extend %nitroPremiumContainer !optional;
@@ -5998,8 +6052,14 @@ pre {
 .profile__9c3be {
     @extend %userProfileModalV2Profile !optional;
 }
+.profileBody__9c3be {
+	@extend %userProfileModalV2ProfileBody !optional;
+}
 .container__37bfc {
 	@extend %userProfileModalV2SideContainer !optional;
+}
+.scroller__37bfc {
+	@extend %userProfileModalV2SideHeaderScroller !optional;
 }
 .scroller__764cd {
     @extend %userProfileModalV2ActivityScroller !optional;
@@ -6366,6 +6426,9 @@ pre {
 }
 .container_fcf29c {
 	@extend %settingsNoticeContainer !optional;
+}
+.message_fcf29c {
+	@extend %settingsNoticeMessage !optional;
 }
 .actions_fcf29c {
 	@extend %settingsNoticeActions !optional;
@@ -7261,6 +7324,9 @@ pre {
 .wrapper__44b0c {
 	@extend %avatarWrapper !optional;
 }
+.avatarDecoration__44b0c {
+	@extend %avatarStatusDecoration !optional;
+}
 .avatar__44b0c {
 	@extend %avatarImage !optional;
 }
@@ -7279,14 +7345,8 @@ pre {
 .avatarDecoration_c19a55 {
 	@extend %avatarDecoration !optional;
 }
-.avatarOffline-3GF27z {
-	@extend %avatarOffline !optional;
-}
 .avatarUploaderInner_ab876d {
 	@extend %avatarUploaderInner !optional;
-}
-.avatarUploaderHint-2ZdBlc {
-	@extend %avatarUploaderHint !optional;
 }
 .botTag__82f07 {
 	@extend %botTag !optional;
@@ -7341,21 +7401,6 @@ pre {
 }
 .addButtonIcon__48c1c {
 	@extend %roleAddButtonIcon !optional;
-}
-.roleWrapper-2IhvNd {
-	@extend %roleWrapper !optional;
-}
-.overflowButton-19oxmH {
-	@extend %roleOverflowButton !optional;
-}
-.overflowIcon-863s2Z {
-	@extend %roleOverflowIcon !optional;
-}
-.container-3ssFyj {
-	@extend %rolePreviewPopout !optional;
-}
-.item-1BCeuB {
-	@extend %rolePreviewItem !optional;
 }
 .role_deddac {
 	@extend %channelroles !optional
@@ -9067,18 +9112,6 @@ pre {
 .triggerSettingsContainer_b6c6eb {
 	@extend %triggerSettingsContainer !optional;
 }
-.searchContainer-3slruV {
-	@extend %triggerSettingsSearchContainer !optional;
-}
-.container_fea832 {
-	@extend %triggerSettingsSearchBox !optional;
-}
-.inner_fea832 {
-	@extend %triggerSettingsSearchBoxInner !optional;
-}
-.input_fea832 {
-	@extend %triggerSettingsSearchInput !optional;
-}
 .exemptionHint__54558 {
 	@extend %triggerSettingsExemptionHint !optional;
 }
@@ -10324,7 +10357,7 @@ pre {
 .pageWrapper__6db1d {
 	@extend %shopPageWrapper !optional;
 }
-.page__6db1d {
+.page__1feb0 {
 	@extend %shopPage !optional;
 }
 .tabs__80679 {
@@ -10335,6 +10368,9 @@ pre {
 }
 .selected__80679 {
 	@extend %shopTabSelected !optional;
+}
+.searchBar__824d3 {
+	@extend %shopSearchBar !optional;
 }
 .countDownWrapper_a1b7b8 {
 	@extend %shopCountDownWrapper !optional;
@@ -10404,6 +10440,9 @@ pre {
 }
 .chatPreview_c50f62 {
 	@extend %shopChatPreview !optional;
+}
+.filterBar__11877 {
+	@extend %shopFilterBar !optional;
 }
 .mockInput_c50f62 {
 	@extend %shopMockInput !optional;
@@ -10855,16 +10894,16 @@ pre {
 .checkboxMute_db81c6 {
     @extend %notificationCheckboxMute !optional;
 }
-.container__86ab2 {
+.container_dca174 {
     @extend %guildChatPopoutContainer !optional;
 }
-.banner__86ab2 {
+.banner_dca174 {
 	@extend %guildChatPopoutBanner !optional;
 }
 .bannerImage_e0fe28 {
     @extend %guildChatPopoutBannerImage !optional;
 }
-.avatarWrapper__86ab2 {
+.avatarWrapper_dca174 {
 	@extend %guildChatPopoutAvatarWrapper !optional;
 }
 .cardContainer__88e24 {
@@ -10993,11 +11032,29 @@ pre {
 .container_c50183 {
     @extend %questsMovedContainer !optional;
 }
+.headerBar__1a9ce {
+	@extend %questsHeaderBar !optional;
+}
 .container__955a3 {
     @extend %questsHeaderContainer !optional;
 }
 .backdrop__8a7fc {
     @extend %questsHeaderBackdrop !optional;
+}
+.clickable_a3e8db {
+	@extend %questsHeaderOrbsClickable !optional;
+}
+.container_a3e8db {
+    @extend %questsHeaderOrbsContainer !optional;
+}
+.highlighted_a3e8db {
+    @extend %questsHeaderOrbsContainerHighlighted !optional;
+}
+.selected_a3e8db {
+    @extend %questsHeaderOrbsContainerSelected !optional;
+}
+.container_b4f99f {
+    @extend %questsHeaderOrbsPopoutContainer !optional;
 }
 .bannerContainer__955a3 {
     @extend %questsBannerContainer !optional;
@@ -11052,6 +11109,21 @@ pre {
 }
 .questRewardTileAsset__956c6 {
     @extend %questCardRewardTileAsset !optional;
+}
+.videoCont_de2fa0 {
+    @extend %questVideoCont !optional;
+}
+.videoFooterContGradient_de2fa0 {
+    @extend %questVideoFooterContGradient !optional;
+}
+.videoInner_de2fa0 {
+    @extend %questVideoInner !optional;
+}
+.videoContOverlay_de2fa0 {
+    @extend %questVideoContOverlay !optional;
+}
+.stillFrameImageCard_de2fa0 {
+    @extend %questVideoStillFrameImageCard !optional;
 }
 .item_aade6b {
     @extend %encryptionVerifiedDeviceItem !optional;
@@ -11129,7 +11201,12 @@ pre {
 	@extend %vencordOneko !optional;
 }
 
-
+.client-theme-color-picker {
+    @extend %clientThemeColorPicker !optional;
+}
+.align-chat-input {
+    @extend %alignChatInput !optional;
+}
 .visual-refresh {
     @extend %visualRefresh !optional;
 }
