--- a/Themes/Translucence/src/beta/_visualRefresh.scss
+++ b/Themes/Translucence/src/beta/_visualRefresh.scss
@@ -442,3 +442,15 @@
         background-color: transparent;
     }
 }
+
+%alignChatInput {
+    %channelTextAreaAttachWrapper {
+        padding: 0;
+    }
+
+    %channelTextAreaAttachButtonInner,
+    %channelTextAreaButtonInner:not(%channelTextAreaButtonInnerNoHover),
+    %channelTextAreaEmojiButton {
+        border-radius: var(--space-16);
+    }
+}
