--- a/Themes/Translucence/src/settings/server/_contentModeration.scss
+++ b/Themes/Translucence/src/settings/server/_contentModeration.scss
@@ -47,14 +47,6 @@
     }
 }
 
-%triggerSettingsSearchContainer {
-    %popoutSearchRichTag {
-        margin: 4px 0 4px 4px;
-        background-color: var(--card-color);
-        border-radius: 13px;
-    }
-}
-
 %keywordsTextArea {
     background-color: rgba(var(--textarea-color), var(--textarea-alpha));
     border-radius: 18px;
